--- a/index.html
+++ b/index.html
@@ -8,7 +8,33 @@
 </head>
 
 <body>
-
+    <!-- Header Section Start -->
+    <header>
+        <div class="container">
+            <div class="head-flex">
+                <!-- Logo -->
+                <div class="left-logo">
+                    <p>Leverege </p>
+                </div>
+                <!-- Nav -->
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <!-- Button -->
+                <div class="right-button">
+                    <a href="#">Buy Now</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header Section End -->
+    <!-- Banner Section Start-->
+    <!-- Banner Section End-->
 </body>
 
 </html>
