--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Custom Link -->
     <link rel="stylesheet" href="css/style.css">
     <title>Leverege</title>
@@ -26,7 +30,7 @@
                     </ul>
                 </div>
                 <!-- Button -->
-                <div class="right-button">
+                <div class="leverege-button">
                     <a href="#">Buy Now</a>
                 </div>
             </div>
@@ -34,7 +38,116 @@
     </header>
     <!-- Header Section End -->
     <!-- Banner Section Start-->
+    <section class="banner">
+        <div class="container">
+            <div class="banner-flex">
+                <div class="b-left">
+                    <img src="images/hero-9.jpg" width="500" alt="">
+                </div>
+                <div class="b-right">
+                    <h1>Hello Guys! <br>
+                        I'm Zoe Fox.</h1>
+                    <div class="leverege-button">
+                        <a href="#">Get Started</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Banner Section End-->
+    <!-- Social Section Start -->
+    <section class="social">
+        <div class="container">
+            <div class="social-items">
+                <div class="social-item">
+                    <i class="fa-solid fa-globe"></i>
+                    <h2>Global</h2>
+                    <p>We build professional responsive websites optimized for the most popular search engines.
+                    </p>
+                </div>
+                <div class="social-item">
+                    <i class="fa-brands fa-youtube"></i>
+                    <h2>Youtube</h2>
+                    <p>We build professional responsive websites optimized for the most popular search engines.
+                    </p>
+                </div>
+                <div class="social-item">
+                    <i class="fa-brands fa-wordpress"></i>
+                    <h2>WordPress</h2>
+                    <p>We build professional responsive websites optimized for the most popular search engines.
+                    </p>
+                </div>
+                <div class="social-item">
+                    <i class="fa-brands fa-instagram"></i>
+                    <h2>Instagram</h2>
+                    <p>We build professional responsive websites optimized for the most popular search engines.
+                    </p>
+                </div>
+                <div class="social-item">
+                    <i class="fa-brands fa-twitter"></i>
+                    <h2>Twitter</h2>
+                    <p>We build professional responsive websites optimized for the most popular search engines.
+                    </p>
+                </div>
+                <div class="social-item">
+                    <i class="fa-brands fa-linkedin"></i>
+                    <h2>Linkedin</h2>
+                    <p>We build professional responsive websites optimized for the most popular search engines.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Social Section End -->
+    <!-- About Us Start -->
+    <section class="about">
+        <div class="container">
+            <div class="a-flex">
+                <div class="left-content">
+                    <h3>About Us</h3>
+                    <p>For over 8 years we have been developing digital solutions for companies looking to gain better
+                        visibility on the internet.
+                        <br><br>
+                        is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and scrambled it to make a type specimen book. It has survived not only five centuries, but
+                        also the
+                    </p>
+                    <div class="leverege-button">
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="right-image">
+                    <img src="images/about.jpg" width="400" height="600" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- About Us End -->
+    <!-- Gallery Start -->
+    <section class="gallery">
+        <div class="container">
+            <h4>OUR GALLERY</h4>
+            <div class="gallery-grid">
+                <img src="images/news-1-h.jpg" alt="">
+                <img src="images/news-2-h.jpg" alt="">
+                <img src="images/news-3-h.jpg" alt="">
+                <img src="images/news-4-h.jpg" alt="">
+                <img src="images/news-5-h.jpg" alt="">
+                <img src="images/news-6-h.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Gallery End -->
+    <!-- Footer Start -->
+    <footer>
+        <p>Emergency Contact
+        </p>
+        <div class="leverege-button">
+            <a href="#">Contact</a>
+        </div>
+    </footer>
+    <!-- Footer End -->
 </body>
 
 </html>
